tests/NormalTests/paczka1/fuzzy1/89754772.err
Error in line 2: 2EYLoBjusb S546 64,4
Error in line 24: KvqYZSEoP S818 212,29
Error in line 21: DJrLOKgR S370 46,7
Error in line 27: 2EYLoBjusb S546 94,4
Error in line 30: 2EYLoBjusb A797 49,8
Error in line 35: S818 S370 54,7
